Creacion de APPs Products y Users

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,6 @@
 SECRET_KEY="django-insecure-=1lo-bv2@$vjlb+r@qj5#2zfy)0^_k4k_w1ip+o7r10*1$upyb"
+DATABASE_NAME=rinconcitomusical
+DATABASE_USER=postgres
+DATABASE_PASSWORD=r0n@z4r2#
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
