--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ Django==4.2.6
 django-cors-headers==4.3.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+gunicorn==21.2.0
 idna==3.4
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+packaging==23.2
 Pillow==10.1.0
 psycopg2==2.9.9
 PyJWT==2.8.0
