--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.17.0",
+    "react-share": "^5.0.3",
     "terser": "^5.22.0"
   },
   "devDependencies": {
